--- a/app/src/main/res/layout/dialog_show_note.xml
+++ b/app/src/main/res/layout/dialog_show_note.xml
@@ -11,52 +11,54 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/important_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textViewTodo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="31dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/todo_text"
-        app:layout_constraintStart_toStartOf="@+id/txtTitle"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginTop="80dp"
+        android:background="#9C27B0"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/important_text" android:textColor="#FFEB3B"
+        app:layout_constraintStart_toEndOf="@+id/textViewTodo" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/textViewIdea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="17dp"
-        android:text="@string/idea_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="108dp"
+        android:background="#9C27B0"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/idea_text" android:textColor="#FFEB3B"
+        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.111"
+        app:layout_constraintStart_toEndOf="@+id/textViewImportant" app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+        android:id="@+id/textViewTodo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:background="#9C27B0"
+        android:fontFamily="sans-serif-condensed-light"
+        android:text="@string/todo_text" android:textColor="#FFEB3B"
+        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
+        android:background="#F4EFEF"
         android:text="TextView"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTodo" />
+        android:textAllCaps="false"
+        android:textSize="24sp" app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.051" app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/txtDescription"
-        android:layout_width="wrap_content"
+        android:layout_width="363dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="118dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="128dp"
+        android:background="#F4EFEF"
+        android:shadowColor="#1F37BD"
+        android:text="TextView" android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
     <Button
         android:id="@+id/btnOK"
         android:layout_width="wrap_content"
@@ -65,5 +67,6 @@
         android:text="@string/ok_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtDescription" app:layout_constraintVertical_bias="1.0"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
